--- a/Basic Stats Model.ipynb
+++ b/Basic Stats Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[5 rows x 147 columns]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -331,8 +331,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "metadata": {},
+   "execution_count": 194,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -360,6 +362,87 @@
     "# basic_stats[\"B_Stance\"] = basic_stats[\"B_Stance\"].fillna(\"Orthodox\")\n",
     "\n",
     "# basic_stats[\"R_Stance\"] = basic_stats[\"R_Stance\"].fillna(\"Orthodox\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        31.000000\n",
+       "1        32.000000\n",
+       "2        36.000000\n",
+       "3        26.000000\n",
+       "4        32.000000\n",
+       "5        33.000000\n",
+       "6        32.000000\n",
+       "7        25.000000\n",
+       "8        31.000000\n",
+       "9        34.000000\n",
+       "10       28.000000\n",
+       "11       35.000000\n",
+       "12       33.000000\n",
+       "13       30.000000\n",
+       "14       27.000000\n",
+       "15       26.000000\n",
+       "16       29.000000\n",
+       "17       26.000000\n",
+       "18       27.000000\n",
+       "19       37.000000\n",
+       "20       39.000000\n",
+       "21       30.000000\n",
+       "22       23.000000\n",
+       "23       29.000000\n",
+       "24       24.000000\n",
+       "25       26.000000\n",
+       "26       30.000000\n",
+       "27       28.000000\n",
+       "28       31.000000\n",
+       "29       34.000000\n",
+       "           ...    \n",
+       "5116     29.171963\n",
+       "5117     26.000000\n",
+       "5118     29.171963\n",
+       "5119     29.171963\n",
+       "5120     34.000000\n",
+       "5121     30.000000\n",
+       "5122     29.171963\n",
+       "5123     29.171963\n",
+       "5124     24.000000\n",
+       "5125     29.171963\n",
+       "5126     29.171963\n",
+       "5127     29.171963\n",
+       "5128     29.171963\n",
+       "5129     29.171963\n",
+       "5130     29.171963\n",
+       "5131     29.171963\n",
+       "5132     29.171963\n",
+       "5133     29.171963\n",
+       "5134     29.171963\n",
+       "5135     18.000000\n",
+       "5136     34.000000\n",
+       "5137     29.171963\n",
+       "5138     29.000000\n",
+       "5139     29.171963\n",
+       "5140     30.000000\n",
+       "5141     30.000000\n",
+       "5142     29.171963\n",
+       "5143     24.000000\n",
+       "B_age    29.172016\n",
+       "R_age    29.442323\n",
+       "Name: B_age, Length: 5146, dtype: float64"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "basic_stats[\"B_age\"]"
    ]
   },
   {
