updated logging feature for multiple models

--- a/UFC Single Fighter.ipynb
+++ b/UFC Single Fighter.ipynb
@@ -37,12 +37,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "X,y = winners_only_cleaning(df)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.1,random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# STOP - Modeling Time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup Logging Dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = [\"RANDOM FOREST\",\"XGB GRADIENT BOOSTING\"]\n",
+    "\n",
+    "#ORDER: \n",
+    "# MODEL\n",
+    "# PARAMS\n",
+    "# ACCURACY\n",
+    "# FEATRUE IMPORTANCE\n",
+    "\n",
+    "log_info = {}\n",
+    "\n",
+    "for each in models:\n",
+    "    log_info[each] = []\n",
+    "\n",
+    "cols = X.columns"
    ]
   },
   {
@@ -54,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +118,7 @@
        "           oob_score=False, random_state=None, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,56 +130,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.5666930438161036"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------RF ACCURACY-------\n",
+      "0.5752\n"
+     ]
     }
    ],
    "source": [
+    "#RUN AND LOG\n",
     "RF_Acc = clf.score(X_test,y_test)\n",
-    "RF_Acc"
+    "RF_FeatImp = sorted(zip(clf.feature_importances_.round(4),cols),reverse=True)[:10]\n",
+    "RF_Params = str(clf.get_params())\n",
+    "\n",
+    "print(\"------RF ACCURACY-------\")\n",
+    "print((RF_Acc).round(4))\n",
+    "\n",
+    "log_info[\"RANDOM FOREST\"].append(RF_Params)\n",
+    "log_info[\"RANDOM FOREST\"].append(RF_Acc)\n",
+    "log_info[\"RANDOM FOREST\"].append(RF_FeatImp)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XG BOOST"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Logged Successfully'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import xgboost as xgb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +207,7 @@
        "       silent=True, subsample=0.6)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,23 +218,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.5978857066066696"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------XGB ACCURACY-------\n",
+      "0.5979\n"
+     ]
     }
    ],
    "source": [
-    "predict=model.predict(X_test)\n",
-    "model.score(X_test,y_test)"
+    "XGB_Acc = model.score(X_test,y_test)\n",
+    "XGB_FeatImp = sorted(zip(model.feature_importances_.round(4),cols),reverse=True)[:10]\n",
+    "XGB_Params = str(model.get_params())\n",
+    "\n",
+    "print(\"------XGB ACCURACY-------\")\n",
+    "print((XGB_Acc).round(4))\n",
+    "\n",
+    "log_info[\"XGB GRADIENT BOOSTING\"].append(XGB_Params)\n",
+    "log_info[\"XGB GRADIENT BOOSTING\"].append(XGB_Acc)\n",
+    "log_info[\"XGB GRADIENT BOOSTING\"].append(XGB_FeatImp)\n",
+    "\n"
    ]
   },
   {
@@ -200,66 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cols = X.columns\n",
-    "\n",
-    "models = [\"RANDOM FOREST\",\"XGB GRADIENT BOOSTING\"]\n",
-    "\n",
-    "mdl_params = []\n",
-    "mdl_params.append(str(clf.get_params()))\n",
-    "mdl_params.append(str(model.get_params()))\n",
-    "\n",
-    "RF_FeatImp = sorted(zip(clf.feature_importances_.round(4),cols),reverse=True)[:10]\n",
-    "XGB_FeatImp = sorted(zip(model.feature_importances_.round(4),cols),reverse=True)[:10]\n",
-    "\n",
-    "mdl_features = []\n",
-    "mdl_features.append(RF_FeatImp)\n",
-    "mdl_features.append(XGB_FeatImp)\n",
-    "\n",
-    "\n",
-    "RF_Acc = clf.score(X_test,y_test)\n",
-    "XGB_Acc = model.score(X_test,y_test)\n",
-    "\n",
-    "mdl_acc = []\n",
-    "mdl_acc.append(RF_Acc)\n",
-    "mdl_acc.append(XGB_Acc)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0.0264, 'avg_SIG_STR_pct'),\n",
-       " (0.0261, 'avg_TOTAL_STR_landed'),\n",
-       " (0.0253, 'avg_opp_TOTAL_STR_landed'),\n",
-       " (0.0253, 'avg_GROUND_att'),\n",
-       " (0.0248, 'avg_opp_TD_pct'),\n",
-       " (0.0243, 'avg_opp_SIG_STR_pct'),\n",
-       " (0.0229, 'total_time_fought(seconds)'),\n",
-       " (0.0226, 'avg_opp_SUB_ATT'),\n",
-       " (0.0224, 'avg_HEAD_landed'),\n",
-       " (0.0222, 'total_rounds_fought')]"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "XGB_FeatImp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -268,14 +262,51 @@
        "'Logged Successfully'"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#RUN LOG\n",
-    "log(cols,feature_importance_list,accuracy_list,parameters_list)"
+    "log(cols,log_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'bootstrap': True, 'criterion': 'mse', 'max_depth': None, 'max_features': 'auto', 'max_leaf_nodes': None, 'min_impurity_decrease': 0.0, 'min_impurity_split': None, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 100, 'n_jobs': None, 'oob_score': False, 'random_state': None, 'verbose': 0, 'warm_start': False}\n",
+      "R\n",
+      "A\n",
+      "N\n",
+      "{'base_score': 0.5, 'booster': 'gbtree', 'colsample_bylevel': 1, 'colsample_bytree': 0.4, 'gamma': 0, 'learning_rate': 0.07, 'max_delta_step': 0, 'max_depth': 3, 'min_child_weight': 1.5, 'missing': None, 'n_estimators': 1000, 'n_jobs': 1, 'nthread': None, 'objective': 'reg:linear', 'random_state': 0, 'reg_alpha': 0.75, 'reg_lambda': 0.45, 'scale_pos_weight': 1, 'seed': 42, 'silent': True, 'subsample': 0.6}\n",
+      "X\n",
+      "G\n",
+      "B\n"
+     ]
+    }
+   ],
+   "source": [
+    "for each in log_info:\n",
+    "    print(log_info[each][0])\n",
+    "    print(each[0])\n",
+    "    print(each[1])\n",
+    "    print(each[2])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   },
   {
