updated historical analysis

--- a/UFC EDA.ipynb
+++ b/UFC EDA.ipynb
@@ -964,7 +964,7 @@
     }
    ],
    "source": [
-    "df.groupby(\"R_fighter\")[\"R_fighter\"].describe()"
+    "df.groupby(\"R_fighter\")[\"R_fighter\"]"
    ]
   },
   {
