--- a/Reach Vals KNN Filler.ipynb
+++ b/Reach Vals KNN Filler.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "(10288, 2)"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -100,10 +100,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1a261cc7b8>"
+       "<matplotlib.collections.PathCollection at 0x1a216884a8>"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -121,7 +121,7 @@
     }
    ],
    "source": [
-    "plt.scatter(MasterHR[\"Height\"],MasterHR[\"Reach\"])"
+    "plt.scatter(MasterHR[\"Height\"],MasterHR[\"Reach\"])\n"
    ]
   },
   {
